apps/todo-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-todo-app
  namespace: example-todo-app
  annotations:
    image.openshift.io/triggers: |-
      [
        {
          "from": {
            "kind: "ImageStreamTag",
            "name": "example-todo-app:latest"
          },
          "fieldPath": "spec.template.spec.containers[0].image"
        }
      ]
  labels:
    app: example-todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-todo-app
  template:
    metadata:
      labels:
        app: example-todo-app
    spec:
      containers:
        - name: example-todo-app
          image: image-registry.openshift-image-registry.svc:5000/example-todo-app/example-todo-app
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
