apps/todo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-todo-app
  namespace: example-todo-app
  labels:
    app: example-todo-app
spec:
  selector:
    app: example-todo-app
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
