apps/todo-app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example-todo-app
  namespace: example-todo-app
  labels:
    app: example-todo-app
spec:
  host: app.sandbox3253.opentlc.com
  port:
    targetPort: http
  to:
    kind: Service
    name: example-todo-app
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
